# legal-raggy

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml
.articles/: 0000-second-brain-before-project-setup.md  0001-project-skeleton.md  0002-core-models.md  0003-heuristic-extractor.md  0004-rule-engine.md  0005-analyze-endpoint.md  0006-markdown-renderer.md  0007-local-corpus-loader.md  0008-assessment-citations.md  0009-qdrant-embeddings.md  0010-hybrid-retrieval.md  0011-hybrid-citations.md  0012-llm-extractor.md  0013-llm-pipeline.md  0014-langgraph-skeleton.md  0015-grounding-routing.md  0016-evaluation.md  0017-real-laws-fetcher.md  0018-auto-update-laws.md  0019-hybrid-citations.md  0020-search-endpoint.md  0021-llm-extraction-eval.md  README.md  STYLEGUIDE.md
.decisions/: 0001-second-brain-workflow.md  0002-deterministic-mvp-boundaries.md  README.md  template.md
.handoff/: README.md  current-state.md
.quality/: definition-of-done.md  traceability.md
.radar/: README.md  technology-radar.md
.reviews/: 0001-project-skeleton.md  0002-core-models.md  0003-heuristic-extractor.md  0004-milestone-2-flow.md  0005-search-endpoint.md  0006-llm-extraction-eval.md  README.md  template.md
.risks/: 0001-legal-source-freshness.md  0002-heuristic-false-results.md  README.md  template.md
.tasks/: README.md  template.md
scripts/: check_docs.py  fetch_laws.py  run_eval.py  update_laws_cron.py
tests/: __init__.py  test_analyze_api.py  test_check_docs.py  test_citations.py  (+17 more)
(+99 files in other folders)
